attempted fix to text wrapping

--- a/style.css
+++ b/style.css
@@ -86,6 +86,20 @@ pre {
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
     margin-left: 5%;
    }
+   samp{
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;
+}
+span{
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;  
+}
 
 .mainText a {
     color: #ff7b00;
